--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -4,7 +4,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="/img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/home"> <img src="/img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -14,33 +14,37 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="/home">Home</a>
                                 </li>
                                
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         product
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="product_list.html"> product list</a>
-                                        <a class="dropdown-item" href="single-product.html">product details</a>
-                                        <a class="dropdown-item" href="checkout.html">product checkout</a>
-                                        <a class="dropdown-item" href="cart.html">shopping cart</a>
-                                        <a class="dropdown-item" href="confirmation.html">confirmation</a>
+                                        <a class="dropdown-item" href="/product"> product list</a>
+                                        
+                                        <a class="dropdown-item" href="/checkout">product checkout</a>
+                                        <a class="dropdown-item" href="/cart">shopping cart</a>
+                                        <a class="dropdown-item" href="/history">order history</a>
                                         
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
+                                    <a class="nav-link dropdown-toggle"  id="navbarDropdown_3"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         pages
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="login.html"> 
-                                            login
-                                            
-                                        </a>
+                                        <a class="dropdown-item" href="/login">login </a>
+                                        <a class="dropdown-item" href="/registration">registration</a>
+                                        {{#if Active}}
+                                        <li><a class="dropdown-item" href="/info">{{info}}</a></li>
+                                        <li><a class="dropdown-item" href="/changepassword">{{change}}</a></li>
+                                        <li><a class="dropdown-item" href="/logout">{{logout}}</a></li>
+                                        {{else}}
+                                        {{/if}}
                                        
                                         
                                     </div>
@@ -53,7 +57,7 @@
                         </div>
                         <div class="hearer_icon d-flex align-items-center">
                           
-                            <a href="cart.html">
+                            <a href="/cart">
                                 <i class="flaticon-shopping-cart-black-shape"></i>
                             </a>
                         </div>
