--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -28,57 +28,26 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section_tittle text-center">
-                        <h2>Trending Items</h2>
+                        <h2>Mặt hàng thịnh hành</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
+                
+                
+                
+               
+                {{#each products}}
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_product_item">
-                        <div class="single_product_item_thumb">
-                            <img src="/img/tranding_item/tranding_item_1.png" alt="#" class="img-fluid">
-                        </div>
-                        <h3> <a href="single-product.html">Cervical pillow for airplane
-                        car office nap pillow</a> </h3>
-                        <p>From $5</p>
+                        <a href="singleproduct/{{this._slug}}">
+                            <img src="{{this._img}}" alt="#" class="img-fluid">
+                        </a>
+                        <h3> <a href="singleproduct/{{this._id}}">{{this._nameproduct}}</a> </h3>
+                        <p>From ${{this._price}}</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_product_item">
-                        <img src="/img/tranding_item/tranding_item_2.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Foam filling cotton slow rebound pillows</a> </h3>
-                        <p>From $5</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_product_item">
-                        <img src="/img/tranding_item/tranding_item_3.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Memory foam filling cotton Slow rebound pillows</a> </h3>
-                        <p>From $5</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_product_item">
-                        <img src="/img/tranding_item/tranding_item_4.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Cervical pillow for airplane
-                        car office nap pillow</a> </h3>
-                        <p>From $5</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_product_item">
-                        <img src="/img/tranding_item/tranding_item_5.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Foam filling cotton slow rebound pillows</a> </h3>
-                        <p>From $5</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_product_item">
-                        <img src="/img/tranding_item/tranding_item_6.png" alt="#" class="img-fluid">
-                        <h3> <a href="single-product.html">Memory foam filling cotton Slow rebound pillows</a> </h3>
-                        <p>From $5</p>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
     </section>
