--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -40,9 +40,9 @@
                                         <a class="dropdown-item" href="/login">login </a>
                                         <a class="dropdown-item" href="/registration">registration</a>
                                         {{#if Active}}
-                                        <li><a class="dropdown-item" href="/info">{{info}}</a></li>
-                                        <li><a class="dropdown-item" href="/changepassword">{{change}}</a></li>
-                                        <li><a class="dropdown-item" href="/logout">{{logout}}</a></li>
+                                        <a class="dropdown-item" href="/info">{{info}}</a>
+                                       <a class="dropdown-item" href="/changepassword">{{change}}</a>
+                                        <a class="dropdown-item" href="/logout">{{logout}}</a>
                                         {{else}}
                                         {{/if}}
                                        
