--- a/src/resources/views/registration.hbs
+++ b/src/resources/views/registration.hbs
@@ -1,18 +1,16 @@
-<!-- Start Banner Area -->
-    <section class="banner-area organic-breadcrumb">
+<!-- breadcrumb part start-->
+    <section class="breadcrumb_part">
         <div class="container">
-            <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-                <div class="col-first">
-                    <h1>Registration</h1>
-                    <nav class="d-flex align-items-center">
-                        <a href="/home">Home<span class="lnr lnr-arrow-right"></span></a>
-                        <a href="/registration">Registration</a>
-                    </nav>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumb_iner">
+                        <h2>Registration</h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End Banner Area -->
+    <!-- breadcrumb part end-->
 
   
     <section class="vh-100" style="background-color: #eee;">
@@ -52,7 +50,7 @@
                     </div>
 									
 									<div class="col-md-12 ">
-										<button  type="submit" value="submit" class="btn primary-btn">Register</button>
+										<button  type="submit" value="submit" class="btn_3">Register</button>
 									</div>
                  
                      
