--- a/src/resources/views/singleproduct/singleproduct.hbs
+++ b/src/resources/views/singleproduct/singleproduct.hbs
@@ -108,8 +108,8 @@
 											<textarea type="text" class="form-control" name="_message" id="message" rows="1" placeholder="Message"></textarea>
 										</div>
 									</div>
-									<div class="col-md-12 text-right">
-										<button  type="submit" value="submit" class="btn btn-primary btn-lg">Submit Now</button>
+									<div class="col-md-12 text-center">
+										<button  type="submit" value="submit" class="btn_3">Submit Now</button>
 									</div>
 								</form>
 							</div>
