--- a/src/resources/views/confirmation.hbs
+++ b/src/resources/views/confirmation.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>confirmation</h2>
+                        <h2>History</h2>
                     </div>
                 </div>
             </div>
@@ -14,67 +14,51 @@
 
   <!--================ confirmation part start =================-->
   <section class="confirmation_part section_padding">
+    
     <div class="container">
+       {{#each result}}
+       
       <div class="row">
+        
+        
         <div class="col-lg-12">
-          <div class="confirmation_tittle">
-            <span>Thank you. Your order has been received.</span>
+          <div class="order_details_iner">
+            
           </div>
         </div>
+
+      
         <div class="col-lg-6 col-lx-4">
           <div class="single_confirmation_details">
             <h4>order info</h4>
             <ul>
               <li>
-                <p>order number</p><span>: 60235</span>
+                <p>number</p><span>: {{this.order._phonenumber}}</span>
               </li>
               <li>
-                <p>data</p><span>: Oct 03, 2017</span>
+                <p>data</p><span>: {{this.order._book}}</span>
               </li>
               <li>
-                <p>total</p><span>: USD 2210</span>
+                <p>total</p><span>: USD {{this.order._total}}</span>
               </li>
               <li>
-                <p>mayment methord</p><span>: Check payments</span>
+                <p>status</p><span>: {{this.order._status}}</span>
               </li>
             </ul>
           </div>
         </div>
-        <div class="col-lg-6 col-lx-4">
-          <div class="single_confirmation_details">
-            <h4>Billing Address</h4>
-            <ul>
-              <li>
-                <p>Street</p><span>: 56/8</span>
-              </li>
-              <li>
-                <p>city</p><span>: Los Angeles</span>
-              </li>
-              <li>
-                <p>country</p><span>: United States</span>
-              </li>
-              <li>
-                <p>postcode</p><span>: 36952</span>
-              </li>
-            </ul>
-          </div>
-        </div>
+        
         <div class="col-lg-6 col-lx-4">
           <div class="single_confirmation_details">
             <h4>shipping Address</h4>
             <ul>
               <li>
-                <p>Street</p><span>: 56/8</span>
+                <p>address</p><span>: {{this.order._address}}</span>
               </li>
               <li>
-                <p>city</p><span>: Los Angeles</span>
+                <p>note</p><span>: {{this.order._note}}</span>
               </li>
-              <li>
-                <p>country</p><span>: United States</span>
-              </li>
-              <li>
-                <p>postcode</p><span>: 36952</span>
-              </li>
+              
             </ul>
           </div>
         </div>
@@ -92,40 +76,30 @@
                 </tr>
               </thead>
               <tbody>
+                {{#each this.datas}}
                 <tr>
-                  <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                  <th>x02</th>
-                  <th> <span>$720.00</span></th>
+                  <th colspan="2"><span>{{this._nameproduct}}</span></th>
+                  <th>x0{{this._amount}}</th>
+                  <th> <span>${{this._total}}</span></th>
                 </tr>
+                {{/each}}
+               
+                
                 <tr>
-                  <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                  <th>x02</th>
-                  <th> <span>$720.00</span></th>
+                  <th colspan="3">Total</th>
+                  <th> <span>${{this.order._total}}</span></th>
                 </tr>
-                <tr>
-                  <th colspan="2"><span>Pixelstore fresh Blackberry</span></th>
-                  <th>x02</th>
-                  <th> <span>$720.00</span></th>
-                </tr>
-                <tr>
-                  <th colspan="3">Subtotal</th>
-                  <th> <span>$2160.00</span></th>
-                </tr>
-                <tr>
-                  <th colspan="3">shipping</th>
-                  <th><span>flat rate: $50.00</span></th>
-                </tr>
+                
               </tbody>
-              <tfoot>
-                <tr>
-                  <th scope="col" colspan="3">Quantity</th>
-                  <th scope="col">Total</th>
-                </tr>
-              </tfoot>
+              
             </table>
           </div>
         </div>
       </div>
+      
+      {{/each}}
     </div>
+  
+   
   </section>
   <!--================ confirmation part end =================-->
