--- a/src/resources/views/forgetpassword.hbs
+++ b/src/resources/views/forgetpassword.hbs
@@ -1,18 +1,16 @@
-<!-- Start Banner Area -->
-    <section class="banner-area organic-breadcrumb">
+<!-- breadcrumb part start-->
+    <section class="breadcrumb_part">
         <div class="container">
-            <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-                <div class="col-first">
-                    <h1>Forget Password</h1>
-                    <nav class="d-flex align-items-center">
-                        <a href="/login">Login<span class="lnr lnr-arrow-right"></span></a>
-                        <a href="/forgetpassword">Forget Password</a>
-                    </nav>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumb_iner">
+                        <h2>Quên mật khẩu</h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End Banner Area -->
+    <!-- breadcrumb part end-->
 
   
     <section class="vh-100" style="background-color: #eee;">
@@ -37,14 +35,17 @@
                   
 									
 									<div class="col-md-12 ">
+                    {{#if message}}
                      <div class="form-group">
                        <a >{{message}}</a>
                      </div>
+                     {{else}}
+                     {{/if}}
                       
                     </div>
 									
-									<div class="col-md-12 text-right">
-										<button  type="submit" value="submit" class="btn primary-btn">Confirm</button>
+									<div class="col-md-12 text-center">
+										<button  type="submit" value="submit" class="btn_3">Confirm</button>
 									</div>
                   
                  
