--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -22,7 +22,7 @@
                             <h2>New to our Shop?</h2>
                             <p>There are advances being made in science and technology
                                 everyday, and a good example of this is the</p>
-                            <a href="#" class="btn_3">Create an Account</a>
+                            <a href="/registration" class="btn_3">Create an Account</a>
                         </div>
                     </div>
                 </div>
@@ -31,15 +31,21 @@
                         <div class="login_part_form_iner">
                             <h3>Welcome Back ! <br>
                                 Please Sign in now</h3>
-                            <form class="row contact_form" action="#" method="post" novalidate="novalidate">
+                            <form class="row contact_form"  method="post" novalidate="novalidate">
                                 <div class="col-md-12 form-group p_star">
-                                    <input type="text" class="form-control" id="name" name="name" value=""
+                                    <input type="text" class="form-control" id="name" name="username" 
                                         placeholder="Username">
                                 </div>
                                 <div class="col-md-12 form-group p_star">
-                                    <input type="password" class="form-control" id="password" name="password" value=""
+                                    <input type="password" class="form-control" id="name" name="password" 
                                         placeholder="Password">
                                 </div>
+                                {{#if mess}}
+                                <div class="col-md-12 form-group ">
+                                    <label for="f-option2">{{mess}}</label>
+                                </div>
+                                {{else}}
+                                {{/if}}
                                 <div class="col-md-12 form-group">
                                     <div class="creat_account d-flex align-items-center">
                                         <input type="checkbox" id="f-option" name="selector">
@@ -48,8 +54,9 @@
                                     <button type="submit" value="submit" class="btn_3">
                                         log in
                                     </button>
-                                    <a class="lost_pass" href="#">forget password?</a>
+                                    <a class="lost_pass" href="/forgetpassword">forget password?</a>
                                 </div>
+                                
                             </form>
                         </div>
                     </div>
