--- a/src/resources/views/registration.hbs
+++ b/src/resources/views/registration.hbs
@@ -49,7 +49,7 @@
                       
                     </div>
 									
-									<div class="col-md-12 ">
+									<div class="col-md-12 text-center">
 										<button  type="submit" value="submit" class="btn_3">Register</button>
 									</div>
                  
