--- a/src/resources/views/changepassword.hbs
+++ b/src/resources/views/changepassword.hbs
@@ -55,7 +55,7 @@
 									
 									
 									<div class="col-md-12 text-center">
-										<button  type="submit" value="submit" class="btn_3">Confirm</button>
+										<button  type="submit" value="submit" class="btn_3">Xác nhận</button>
 									</div>
                   
 								</form>
