--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -44,7 +44,7 @@
                             <img src="{{this._img}}" alt="#" class="img-fluid">
                         </a>
                         <h3> <a href="singleproduct/{{this._id}}">{{this._nameproduct}}</a> </h3>
-                        <p>From ${{this._price}}</p>
+                        <p>{{this._price}} ₫</p>
                     </div>
                 </div>
                 {{/each}}
