--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>login</h2>
+                        <h2>Đăng nhập</h2>
                     </div>
                 </div>
             </div>
@@ -19,26 +19,25 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="login_part_text text-center">
                         <div class="login_part_text_iner">
-                            <h2>New to our Shop?</h2>
-                            <p>There are advances being made in science and technology
-                                everyday, and a good example of this is the</p>
-                            <a href="/registration" class="btn_3">Create an Account</a>
+                            <h2>Bạn chưa có tài khoản?</h2>
+                            <p>Cửa hàng bán đồ truyền thống uy tín với hơn 15 năm kinh nghiệm</p>
+                            <a href="/registration" class="btn_3">Tạo tài khoản</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="login_part_form">
                         <div class="login_part_form_iner">
-                            <h3>Welcome Back ! <br>
-                                Please Sign in now</h3>
+                            <h3>Chào mừng ! <br>
+                                Vui lòng đăng nhập</h3>
                             <form class="row contact_form"  method="post" novalidate="novalidate">
                                 <div class="col-md-12 form-group p_star">
                                     <input type="text" class="form-control" id="name" name="username" 
-                                        placeholder="Username">
+                                        placeholder="Tên đăng nhập">
                                 </div>
                                 <div class="col-md-12 form-group p_star">
                                     <input type="password" class="form-control" id="name" name="password" 
-                                        placeholder="Password">
+                                        placeholder="Mật khẩu">
                                 </div>
                                 {{#if mess}}
                                 <div class="col-md-12 form-group ">
@@ -49,12 +48,12 @@
                                 <div class="col-md-12 form-group">
                                     <div class="creat_account d-flex align-items-center">
                                         <input type="checkbox" id="f-option" name="selector">
-                                        <label for="f-option">Remember me</label>
+                                        <label for="f-option">Lưu thông tin</label>
                                     </div>
                                     <button type="submit" value="submit" class="btn_3">
-                                        log in
+                                        đăng nhập
                                     </button>
-                                    <a class="lost_pass" href="/forgetpassword">forget password?</a>
+                                    <a class="lost_pass" href="/forgetpassword">quên mật khẩu?</a>
                                 </div>
                                 
                             </form>
