--- a/src/resources/views/registration.hbs
+++ b/src/resources/views/registration.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>Registration</h2>
+                        <h2>Tạo tài khoản</h2>
                     </div>
                 </div>
             </div>
@@ -22,22 +22,22 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Đăng kí</p>
 
                 <form class="row contact_form" action="/registration/storeadd" method="post" id="contactForm" novalidate="novalidate">
 									<div class="col-md-12">
 										<div class="form-group">
-											<input type="text" class="form-control" id="name" name="_name" placeholder="Your Full name">
+											<input type="text" class="form-control" id="name" name="_name" placeholder="Họ và tên">
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="email" class="form-control" id="gmail" name="_email" placeholder="Your Email">
+											<input type="email" class="form-control" id="gmail" name="_email" placeholder="Email của bạn">
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="text" class="form-control" id="username" name="_username" placeholder="Your Username">
+											<input type="text" class="form-control" id="username" name="_username" placeholder="Tên tài khoản">
 										</div>
 									</div>
                   
@@ -50,7 +50,7 @@
                     </div>
 									
 									<div class="col-md-12 text-center">
-										<button  type="submit" value="submit" class="btn_3">Register</button>
+										<button  type="submit" value="submit" class="btn_3">Tạo tài khoản</button>
 									</div>
                  
                      
