--- a/src/resources/views/forgetpassword.hbs
+++ b/src/resources/views/forgetpassword.hbs
@@ -22,14 +22,14 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Forget Password</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Quên mật khẩu</p>
 
                 <form class="row contact_form" action="/forgetpassword/forget" method="post" id="contactForm" novalidate="novalidate">
 									
                   
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="text" class="form-control" id="username" name="_username" placeholder="Your Username">
+											<input type="text" class="form-control" id="username" name="_username" placeholder="Tên tài khoản">
 										</div>
 									</div>
                   
@@ -45,7 +45,7 @@
                     </div>
 									
 									<div class="col-md-12 text-center">
-										<button  type="submit" value="submit" class="btn_3">Confirm</button>
+										<button  type="submit" value="submit" class="btn_3">Xác nhận</button>
 									</div>
                   
                  
