--- a/src/resources/views/changepassword.hbs
+++ b/src/resources/views/changepassword.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>Change Password</h2>
+                        <h2> Đổi mật khẩu</h2>
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Password</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Mật khẩu</p>
 
                 <form class="row contact_form" method="post" id="contactForm" novalidate="novalidate">
 									
@@ -30,17 +30,17 @@
                   
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="password" class="form-control" id="password" name="password" placeholder="Your Password" >
+											<input type="password" class="form-control" id="password" name="password" placeholder="Mật khẩu hiện tại" >
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="password" class="form-control" id="newpassword" name="newpassword" placeholder="Your New Password" >
+											<input type="password" class="form-control" id="newpassword" name="newpassword" placeholder="Mật khẩu mới" >
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="password" class="form-control" id="repeatpassword" name="repeatpassword" placeholder="Repeat Your New Password" >
+											<input type="password" class="form-control" id="repeatpassword" name="repeatpassword" placeholder="Xác nhận lại mật khẩu" >
 										</div>
 									</div>
 									<div class="col-md-12 ">
