--- a/src/resources/views/cart.hbs
+++ b/src/resources/views/cart.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>cart list</h2>
+                        <h2>Giỏ hàng của bạn</h2>
                     </div>
                 </div>
             </div>
@@ -20,10 +20,10 @@
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">Product</th>
-                <th scope="col">Price</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
+                <th scope="col">Sản phẩm</th>
+                <th scope="col">Giá</th>
+                <th scope="col">Số lượng</th>
+                <th scope="col">Tổng tiền</th>
               </tr>
             </thead>
             <tbody>
@@ -71,8 +71,8 @@
             </tbody>
           </table>
           <div class="checkout_btn_inner float-right">
-            <a class="btn_1" href="/product">Continue Shopping</a>
-            <a class="btn_1 checkout_btn_1" href="{{path}}">Proceed to checkout</a>
+            <a class="btn_1" href="/product">Tiếp tục mua hàng</a>
+            <a class="btn_1 checkout_btn_1" href="{{path}}">Xác nhận đơn hàng</a>
           </div>
         </div>
       </div>
