--- a/src/resources/views/checkout.hbs
+++ b/src/resources/views/checkout.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>checkout</h2>
+                        <h2>xác nhận đơn hàng</h2>
                     </div>
                 </div>
             </div>
@@ -21,43 +21,43 @@
       <div class="billing_details">
         <div class="row">
           <div class="col-lg-8">
-            <h3>Billing Details</h3>
+            <h3>Thông tin giao hàng</h3>
             <form class="row contact_form"  method="post" novalidate="novalidate">
               <div class="col-md-6 form-group p_star">
-                <input type="text" class="form-control" id="number" name="number"  placeholder="Number" />
+                <input type="text" class="form-control" id="number" name="number"  placeholder="Số điện thoại nhận hàng" />
                 
               </div>
               <div class="col-md-6 form-group p_star">
-                <input type="text" class="form-control" id="address" name="address" placeholder="Address" />
+                <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ nhận hàng" />
                 
               </div>
               <div class="col-md-12 form-group">
                 <div class="creat_account">
-                  <h3>Shipping Details</h3>
+                  <h3>Chi tiết giao hàng</h3>
                                     
                 </div>
-                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Order Notes"></textarea>
+                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Ghi chú khác khi nhận hàng"></textarea>
               </div>
               <div class="col-md-12 text-center">
-              <button  type="submit" value="submit" class="btn_3 text-center">Confirm</button>   
+              <button  type="submit" value="submit" class="btn_3 text-center">Xác nhận</button>   
               </div>         
 
             </form>
           </div>
           <div class="col-lg-4">
             <div class="order_box">
-              <h2>Your Order</h2>
+              <h2>Đơn hàng của bạn</h2>
               <ul class="list">
                 <li>
-                  <a href="/product">Product
-                    <span>Total</span>
+                  <a href="/product">Sản phẩm
+                    <span>Tổng tiền</span>
                   </a>
                 </li>
                  {{#each result}}
                 <li>
                   <a >{{this.name}}
                     <span class="middle">x {{this.number}}</span>
-                    <span class="last">${{this.total}}</span>
+                    <span class="last">{{this.total}}₫</span>
                   </a>
                 </li>
                  {{/each}}
@@ -68,8 +68,8 @@
                 
                
                 <li>
-                  <a >Total
-                    <span>${{sum}}</span>
+                  <a >Tổng tiền của đơn hàng
+                    <span>{{sum}}₫</span>
                   </a>
                 </li>
               </ul>
