--- a/src/resources/views/confirmation.hbs
+++ b/src/resources/views/confirmation.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>History</h2>
+                        <h2>Lịch sử đặt hàng</h2>
                     </div>
                 </div>
             </div>
@@ -30,19 +30,19 @@
       
         <div class="col-lg-6 col-lx-4">
           <div class="single_confirmation_details">
-            <h4>order info</h4>
+            <h4>thông tin đơn hàng</h4>
             <ul>
               <li>
-                <p>number</p><span>: {{this.order._phonenumber}}</span>
+                <p>số điện thoại</p><span>: {{this.order._phonenumber}}</span>
               </li>
               <li>
-                <p>data</p><span>: {{this.order._book}}</span>
+                <p>ngày đặt hàng</p><span>: {{this.order._book}}</span>
               </li>
               <li>
-                <p>total</p><span>: USD {{this.order._total}}</span>
+                <p>tổng tiền</p><span>: VNĐ {{this.order._total}}</span>
               </li>
               <li>
-                <p>status</p><span>: {{this.order._status}}</span>
+                <p>trạng thái đơn hàng</p><span>: {{this.order._status}}</span>
               </li>
             </ul>
           </div>
@@ -50,13 +50,13 @@
         
         <div class="col-lg-6 col-lx-4">
           <div class="single_confirmation_details">
-            <h4>shipping Address</h4>
+            <h4>thông tin địa chỉ giao hàng</h4>
             <ul>
               <li>
-                <p>address</p><span>: {{this.order._address}}</span>
+                <p>địa chỉ giao hàng</p><span>: {{this.order._address}}</span>
               </li>
               <li>
-                <p>note</p><span>: {{this.order._note}}</span>
+                <p>ghi chú khi nhận hàng</p><span>: {{this.order._note}}</span>
               </li>
               
             </ul>
@@ -66,13 +66,13 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="order_details_iner">
-            <h3>Order Details</h3>
+            <h3>Chi tiết đơn hàng</h3>
             <table class="table table-borderless">
               <thead>
                 <tr>
-                  <th scope="col" colspan="2">Product</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Total</th>
+                  <th scope="col" colspan="2">Sản phẩm</th>
+                  <th scope="col">Số lượng</th>
+                  <th scope="col">Tổng tiền</th>
                 </tr>
               </thead>
               <tbody>
@@ -80,14 +80,14 @@
                 <tr>
                   <th colspan="2"><span>{{this._nameproduct}}</span></th>
                   <th>x0{{this._amount}}</th>
-                  <th> <span>${{this._total}}</span></th>
+                  <th> <span>{{this._total}}₫</span></th>
                 </tr>
                 {{/each}}
                
                 
                 <tr>
-                  <th colspan="3">Total</th>
-                  <th> <span>${{this.order._total}}</span></th>
+                  <th colspan="3">Tổng tiền đơn hàng</th>
+                  <th> <span>{{this.order._total}}₫</span></th>
                 </tr>
                 
               </tbody>
