--- a/src/resources/views/info.hbs
+++ b/src/resources/views/info.hbs
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>Information</h2>
+                        <h2>Thông tin cá nhân</h2>
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Infomation</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Thông tin cá nhân</p>
 
                 <form class="row contact_form" method="post" id="contactForm" novalidate="novalidate">
 									<div class="col-md-12">
@@ -49,7 +49,7 @@
 									
 									
 									<div class="col-md-12 text-center">
-										<button  type="submit" value="submit" class="btn_3">Confirm</button>
+										<button  type="submit" value="submit" class="btn_3">Xác nhận</button>
 									</div>
 								</form>
 
