--- a/src/resources/views/cart.hbs
+++ b/src/resources/views/cart.hbs
@@ -32,15 +32,15 @@
                 <td>
                   <div class="media">
                     <div class="d-flex">
-                      <img src={{this._img}} alt="" />
+                      <img src={{this.image}} alt="" />
                     </div>
                     <div class="media-body">
-                      <p>{{this._nameproduct}}</p>
+                      <p>{{this.name}}</p>
                     </div>
                   </div>
                 </td>
                 <td>
-                  <h5>${{this._price}}</h5>
+                  <h5>${{this.price}}</h5>
                 </td>
                 <td>
                   <div class="product_count">
@@ -60,7 +60,7 @@
                   </div>
                 </td>
                 <td>
-                  <h5>${{this._price}}</h5>
+                  <h5>${{this.price}}</h5>
                 </td>
               </tr>
                {{/each}}
