--- a/src/resources/views/changepassword.hbs
+++ b/src/resources/views/changepassword.hbs
@@ -63,7 +63,7 @@
               </div>
               <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                <img src="{{customer._avatar}}" class="img-fluid" alt="Sample image">
+                <img src="{{customer.avatar}}" class="img-fluid" alt="Sample image">
 
               </div>
             </div>
