--- a/src/resources/views/registration.hbs
+++ b/src/resources/views/registration.hbs
@@ -27,17 +27,17 @@
                 <form class="row contact_form" action="/registration/storeadd" method="post" id="contactForm" novalidate="novalidate">
 									<div class="col-md-12">
 										<div class="form-group">
-											<input type="text" class="form-control" id="name" name="_name" placeholder="Họ và tên">
+											<input type="text" class="form-control" id="name" name="name" placeholder="Họ và tên">
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="email" class="form-control" id="gmail" name="_email" placeholder="Email của bạn">
+											<input type="email" class="form-control" id="gmail" name="email" placeholder="Email của bạn">
 										</div>
 									</div>
                   <div class="col-md-12">
 										<div class="form-group">
-											<input type="text" class="form-control" id="username" name="_username" placeholder="Tên tài khoản">
+											<input type="text" class="form-control" id="username" name="username" placeholder="Tên tài khoản">
 										</div>
 									</div>
                   
